--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
             body {
                 margin: 0;
                 overflow: hidden;
+                background-color: black;
             }
 
             #stage {
